--- a/Task 1 To-Do List/design.css
+++ b/Task 1 To-Do List/design.css
@@ -11,11 +11,11 @@ body {
   width: 100%;
   height: 100vh;
   padding: 10px;
-  background: lightcoral;
+  background:  rgb(188, 128, 240);
 }
 
 .Wrapper {
-  background: lightgreen;
+  background: rgb(210, 238, 144);
   max-width: 400px;
   width: 100%;
   margin: 120px auto;
